--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
 html,
 body {
     height: 100%;
+    overflow: hidden;
 }
 
 body {
@@ -56,7 +57,7 @@ header nav a:hover {
 
 main {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 50px);
     display: flex;
     flex-direction: row;
 }
@@ -81,7 +82,6 @@ ul.filelist {
 
 ul.filelist li {
     padding: 0;
-    width: 9%;
     display: inline-block;
     vertical-align: top;
 }
@@ -146,6 +146,15 @@ ul.filelist li a img {
 
 .rmenu a:hover {
     background-color: #e4e4e4;
+}
+
+@media(max-width: 748px) {
+    aside {
+        width: 0;
+    }
+    .tree {
+        transform: translateX(-400px);
+    }
 }
 
 .tree {
@@ -259,4 +268,12 @@ label.tree_label:after {
 
 .tree>li:last-child:before {
     display: none;
+}
+
+.d-flex {
+    display: flex;
+}
+
+.flex-column {
+    flex-direction: column;
 }
