--- a/views/explorer.html
+++ b/views/explorer.html
@@ -14,6 +14,15 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <script src="/assets/js/explorer.js"></script>
+
+    <script type="text/ng-template" id="filetree">
+        <li ng-repeat="item in items" ng-init="filei = filei; $parent.filei = $parent.filei + 1;">
+            <span ng-if="item.type != 'directory'" class="tree_label">{{ item.name }}</span>
+            <input ng-if="item.type == 'directory'" ng-init="filei = filei + 1; $parent.filei = $parent.filei + 1;" type="checkbox" id="c-{{ filei }}">
+            <label ng-if="item.type == 'directory'" for="c-{{ filei }}" class="tree_label">{{ item.name }}</label>
+            <ul ng-if="item.type == 'directory' && item.childs" ng-init="items = item.childs;" ng-include="'filetree'"></ul>
+        </li>
+    </script>
 </head>
 
 <body ng-controller="Explorer">
@@ -26,7 +35,7 @@
             </ul>
             <ul>
                 <li>
-                    <a href="/">My files</a>
+                    <a href="/explorer">My files</a>
                 </li>
                 <li>
                     <a href="/">Disconnect</a>
@@ -34,40 +43,43 @@
             </ul>
         </nav>
     </header>
-    <div class="rmenu hide" id="rmenu">
-        <ul>
-            <li>
-                <a href="#">New folder</a>
-            </li>
-
-            <li>
-                <a href="#">New file</a>
-            </li>
-
-            <li>
-                <a href="#">Sort by</a>
-            </li>
-        </ul>
-    </div>
     <main>
         <aside>
             <ul class="tree">
-                <li ng-repeat="file in files">
+                <li ng-repeat="file in tree">
                     <input type="checkbox" id="c{{ filei }}" />
                     <label for="c{{ filei }}" class="tree_label">{{ file.name }}</label>
-                    <ul ng-init="items = file.childs; filei = $index;" ng-include="'/filetree'"></ul>
+                    <ul ng-init="items = file.childs; filei = $index;" ng-include="'filetree'"></ul>
                 </li>
             </ul>
         </aside>
-        <section>
-            <ul class="filelist">
-                <li ng-repeat="file in files" class="col-md-1">
-                    <a href="/explorer">
-                        <img src="/assets/img/{{file.ext != null ? 'fileicons/' + file.ext : 'folder'}}.svg">
-                        <span>{{file.name}}</span>
-                    </a>
-                </li>
-            </ul>
+        <section id="explorer">
+            <div class="rmenu hide" id="rmenu">
+                <ul>
+                    <li>
+                        <a href="#">New folder</a>
+                    </li>
+                    <li>
+                        <a href="#">New file</a>
+                    </li>
+                    <li>
+                        <a href="#">Sort by</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="d-flex flex-column">
+                <div ng-if="!filedata.error">
+                    {{ filedata.data }}
+                </div>
+                <ul ng-if="files.length > 0" class="filelist">
+                    <li ng-repeat="file in files" class="col-lg-1 col-md-2 col-sm-3 col-xs-3">
+                        <a href="/explorer/{{ currentlocation }}/{{ file.name }}">
+                            <img src="/assets/img/{{file.ext != null ? 'fileicons/' + file.ext : 'folder'}}.svg">
+                            <span>{{file.name}}</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
 </body>
