--- a/client/src/app/explorer/explorer.component.html
+++ b/client/src/app/explorer/explorer.component.html
@@ -1,12 +1,6 @@
-<!-- <main>
+<main>
   <aside>
-      <ul class="tree">
-          <li ng-repeat="file in tree">
-              <input type="checkbox" id="c{{ filei }}" />
-              <label for="c{{ filei }}" class="tree_label">{{ file.name }}</label>
-              <ul ng-init="items = file.childs; filei = $index;" ng-include="'filetree'"></ul>
-          </li>
-      </ul>
+      <filestree></filestree>
   </aside>
   <section id="explorer">
       <div class="rmenu hide" id="rmenu">
@@ -23,17 +17,17 @@
           </ul>
       </div>
       <div class="d-flex flex-column">
-          <div ng-if="!filedata.error">
-              {{ filedata.data }}
-          </div>
-          <ul ng-if="files.length > 0" class="filelist">
-              <li ng-repeat="file in files" class="col-lg-1 col-md-2 col-sm-3 col-xs-3">
-                  <span ng-click="explore($event.target.parentElement.pathname, true, $event);">
-                      <img src="/assets/img/{{file.ext != null ? 'fileicons/' + file.ext : 'folder'}}.svg">
-                      <span>{{file.name}}</span>
-                  </span>
-              </li>
-          </ul>
-      </div>
+        <div ng-if="!filedata.error">
+            <!-- {{ filedata.data }} -->
+        </div>
+        <ul ng-if="files.length > 0" class="    ">
+            <li *ngFor="let file of files" class="col-lg-1 col-md-2 col-sm-3 col-xs-3">
+                <span (click)="enterFile(path + '/' + file.name)">
+                    <img src="/assets/img/{{file.ext != null ? 'fileicons/' + file.ext : 'folder'}}.svg">
+                    <span>{{file.name}}</span>
+                </span>
+            </li>
+        </ul>
+    </div>
   </section>
-</main> -->
+</main>
